[package]
name = "todolist-gpui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bon = "3.6.5"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }
rust-embed = "8.7.2"
# smallvec is included here for convenience, it is used by gpui when creating
# components that can have children. uncomment this line or
# use `cargo add smallvec` to add it to your project
#smallvec = "1.13.2"
